<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="mode_names">
        <item >COMSTOCK</item>
        <item >VIRGINIA</item>
        <item >PAR TIME</item>
    </string-array>
    
    <string-array name="mode_value_names">
        <item > </item>
        <item >MAX.SHORTS:</item>
        <item >MAX.TIMES:</item>
    </string-array>
    <string name="app_name">Shot Recorder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_recorder">Start Recorder</string>
    <string name="timelabelname">TIME</string>
    <string name="comstock">COMSTOCK</string>
    <string name="virginia">VIRGINIA</string>
    <string name="par_time">PAR TIME</string>
    <string name="numlabel">NUM:</string>
    <string name="splitlabel">SPLIT:</string>
    <string name="max_shots_label">MAX.SHOTS:</string>
    <string name="btnmode">Mode</string>
    <string name="reset">RESET</string>
    <string name="btnString_Prev">&lt;</string>
    <string name="btnStringNext">></string>
    
    <string name="col_header_number">NUMBER</string>
    <string name="col_header_split">SPLIT</string>
    <string name="col_header_time">TIME</string>
    <string name="strSTART">START</string>
    <string name="strSTOP">STOP</string>
    <string name="serviceisrunning">Shot Recorder is running...</string>
    <string name="str_notify_title">Shot Recorder</string>
    <string name="please_stop_record">Please Stop Record first.</string>
    <string name="READY">READY</string>
    <string name="preventincall_title">INCALL Prevent</string>
    <string name="preventincall_summay">prevent coming phone call when recording</string>
    <string name="threshold_title">Threshold(dB)</string>
    <string name="threshold_summary">the Threshold dB value</string>
    <string name="delaystart_title">Random Delay Start (sec.)</string>
    <string name="mindelaystart_title">Minimum Delay (%)</string>
    <string name="mindelaystart_summay">The Minimum delay time(sec.), if the Random Delay Start be set.</string>
    <string name="maxshot_zero">Shot number can not be zero.</string>
    <string name="max_par_time_zero">The Par. time can not be zero!</string>
    <string name="numberlabelwithdegree">"N\u00B0"</string>
    <string name="descriptlabel">Descript:</string>
    <string name="descript">Description</string>
    <string name="asksaverecord">Do you want save this shot recorder?</string>
    <string name="nohistoryrecords">No history records. Click \'Start Recorder\' to start.</string>
    <string name="share">Share</string>
    <string name="share_content" formatted="false">"My Shot Record: %s\n\t SHOTS:\t %s\n\t TIME:\t %s(sec)\n\t Date:\t %s"</string>
    <string name="backup">Backup...</string>
    <string name="restore">Restore...</string>
    <string name="unsupport_google_drive">This device doesn\'t support to backup to Google Drive.</string>
    <string name="must_install_google_play">Google Play Services must be installed.</string>

</resources>